
    TAJO-2148: Implement an example HTTP tablespace. (jihoon)

    TAJO-1686: Allow Tajo to use Hive UDF. (Jongyoung Park via jihoon)

    TAJO-2122: PullServer as an Auxiliary service of Yarn. (jihoon)

    TAJO-2109: Implement Radix sort. (jihoon)

    TAJO-1955: Add a feature to strip quotes from CSV file. (hyunsik)

  IMPROVEMENT

    TAJO-2170: Disable unsetting timezone property. (Lee Dongjin via jinho)

    TAJO-2175: Fix some glitches in source code. (Lee Dongjin via jihoon)

    TAJO-2146: Fragment interface cleanup. (jihoon)

    TAJO-2129: Apply new type implementation to Schema and Catalog. (hyunsik)

    TAJO-2071: Supporting DATE type in Parquet format. 
    (Jongyoung Park via hyunsik)

    TAJO-2106: Fix minor typo in PostgreSQL Storage Handler documentation.
    (Byunghoon Lim via jihoon)

    TAJO-2116: Simplify rpc address in default configuration. (jinho)

    TAJO-2126: Allow parallel execution of non-leaf sibling ExecutionBlocks.
    (jihoon)

    TAJO-2127: Use Type instead of DataType for EvalNode. (hyunsik)

    TAJO-2125: Detect JAVA_HOME on OSX, if JAVA_HOME is not set. (jinho)

    TAJO-2108: Refactor Schema to be immutable. (hyunsik)

    TAJO-2112: Improve disk load, when queries run simultaneously. (jinho)

    TAJO-2104: Implement Identifier which supports quotation information. 
    (hyunsik)

    TAJO-2099: Implement an Adapter for the legacy Schema. (hyunsik)

    TAJO-2091: Error or progress update should use stderr instead of stdout. 
    (hyunsik)

    TAJO-2064: Supporting auto-completion in Tsql. (Jongyoung Park via jaehwa)

    TAJO-2043: Implement new data type and schema. (hyunsik)

    TAJO-2090: Bump up orc version to 0.141. (hyunsik)

    TAJO-2089: Improve null handling in UDF. (jinho)

    TAJO-2073: Upgrade parquet-mr to 1.8.1. (jinho)

    TAJO-2052: Upgrading ORC reader version. (Jongyoung Park via jaehwa)
    
    TAJO-1940: Implement HBaseTablespace::getTableVolume() method. (hyunsik)
