@@ -21,6 +21,9 @@ Release 0.12.0 - unreleased
 
   IMPROVEMENT
 
+    TAJO-2180: Disable unsetting timezone property in HiveCatalogStore.
+    (Lee Dongjin via jinho)
+
     TAJO-2170: Disable unsetting timezone property. (Lee Dongjin via jinho)
 
     TAJO-2175: Fix some glitches in source code. (Lee Dongjin via jihoon)
